<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/con_sort"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:text="@string/Sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/snooze_id"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/snooze"
        app:layout_constraintStart_toEndOf="@+id/con_sort"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_status_id"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/reset"
        app:layout_constraintStart_toEndOf="@+id/snooze_id"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/inc_use_selected_id"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/increase_usage"
        app:layout_constraintStart_toEndOf="@+id/reset_status_id"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>