<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/food_menu_id"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/con_plus_id"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/add_random"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/con_sun_id"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/week"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/food_list_id"
        app:layout_constraintStart_toEndOf="@+id/con_plus_id"
        app:layout_constraintTop_toTopOf="@+id/con_plus_id" />


    <TextView
        android:id="@+id/food_list_id"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/foods"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/food_day_id"
        app:layout_constraintStart_toEndOf="@+id/con_sun_id"
        app:layout_constraintTop_toTopOf="@+id/con_plus_id" />

    <TextView
        android:id="@+id/food_day_id"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/day"
        app:layout_constraintStart_toEndOf="@+id/food_list_id"
        app:layout_constraintTop_toTopOf="@+id/con_plus_id" />

</androidx.constraintlayout.widget.ConstraintLayout>