<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corner"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/day_id"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/day"
        app:layout_constraintStart_toEndOf="@+id/food_list_id"
        app:layout_constraintTop_toTopOf="@+id/food_list_id" />

    <AutoCompleteTextView
        android:id="@+id/search_id"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/hole_view"

        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_id"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/add_use"
        app:layout_constraintEnd_toStartOf="@+id/snooze_id"
        app:layout_constraintStart_toEndOf="@+id/search_id"
        app:layout_constraintTop_toTopOf="@+id/search_id"
        />
    <TextView
        android:id="@+id/snooze_id"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/snooze"
        app:layout_constraintStart_toEndOf="@+id/spinner_id"
        app:layout_constraintEnd_toStartOf="@+id/search_btn"
        app:layout_constraintTop_toTopOf="@+id/search_id"
        />

    <TextView
        android:id="@+id/search_btn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/snooze_id"
        app:layout_constraintTop_toTopOf="@+id/search_id"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/one_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_sun_id" />

    <TextView
        android:id="@+id/two_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="2"
        app:layout_constraintStart_toStartOf="@+id/one_con_id"
        app:layout_constraintTop_toBottomOf="@+id/one_con_id" />

    <TextView
        android:id="@+id/three_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="3"
        app:layout_constraintStart_toStartOf="@+id/two_con_id"
        app:layout_constraintTop_toBottomOf="@+id/two_con_id" />

    <TextView
        android:id="@+id/four_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="4"
        app:layout_constraintStart_toStartOf="@+id/three_con_id"
        app:layout_constraintTop_toBottomOf="@+id/three_con_id" />

    <TextView
        android:id="@+id/five_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="5"
        app:layout_constraintStart_toStartOf="@+id/four_con_id"
        app:layout_constraintTop_toBottomOf="@+id/four_con_id" />

    <TextView
        android:id="@+id/six_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="6"
        app:layout_constraintStart_toStartOf="@+id/five_con_id"
        app:layout_constraintTop_toBottomOf="@+id/five_con_id" />

    <TextView
        android:id="@+id/seven_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="7"
        app:layout_constraintStart_toStartOf="@+id/six_con_id"
        app:layout_constraintTop_toBottomOf="@+id/six_con_id" />

    <TextView
        android:id="@+id/eight_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="8"
        app:layout_constraintStart_toStartOf="@+id/seven_con_id"
        app:layout_constraintTop_toBottomOf="@+id/seven_con_id" />

    <TextView
        android:id="@+id/nine_con_id"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:padding="3dp"
        android:text="9"
        app:layout_constraintStart_toStartOf="@+id/eight_con_id"
        app:layout_constraintTop_toBottomOf="@+id/eight_con_id" />

    <TextView
        android:id="@+id/con_sun_id"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/week"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/food_list_id"
        app:layout_constraintStart_toStartOf="@+id/search_id"
        app:layout_constraintTop_toTopOf="@+id/food_list_id" />

    <TextView
        android:id="@+id/food_list_id"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hole_view"
        android:gravity="center"
        android:text="@string/foods"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/con_sun_id"
        app:layout_constraintTop_toBottomOf="@+id/search_id" />

    <ScrollView
        android:id="@+id/con_sc_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine_con_id"
        app:layout_constraintTop_toBottomOf="@+id/con_sun_id"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45">

        <LinearLayout
            android:id="@+id/con_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/six_con_id"
            app:layout_constraintTop_toTopOf="@+id/one_con_id" />
    </ScrollView>

    <ScrollView
        android:id="@+id/con_sc_id2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="45dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/con_sc_id"
        app:layout_constraintTop_toTopOf="@+id/con_sc_id"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45">

        <LinearLayout
            android:id="@+id/con_item_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/six_con_id2"
            app:layout_constraintTop_toTopOf="@+id/one_con_id2" />
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>